# MatrixMultiplication-using-MPI

./: CMakeLists.txt  README.md  generate_matrices.py  matrix_a.txt  matrix_b.txt  result_mpi.txt  verify.py
